feat: CLIN-1666 - custom jre + docker-compose